--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <![CDATA[<!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" sizes="192x192" href="img/mlg-favicon.png" />
-    <link rel="shortcut icon" href="img/mlg-favicon.png" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="img/mlg-favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/3kho/3kho.github.io@tree/main/projects/soundboard/css/styles.css" />
+    <link rel="icon" sizes="192x192" href="https://cdn.jsdelivr.net/gh/3kho/3kho.github.io@tree/main/projects/soundboard/img/mlg-favicon.png" />
+    <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/3kho/3kho.github.io@tree/main/projects/soundboard/img/mlg-favicon.png" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/3kho/3kho.github.io@tree/main/projects/soundboard/img/mlg-favicon.png" type="image/x-icon" />
 
     <title>Soundboard | 3kh0</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -27,7 +27,7 @@
     <h1>Online Soundboard</h1>
     <h2>
       Just click on the colorful buttons to play the sound.<br />
-      <a href="https://forms.gle/hoiTBEZ4p14iupXH6">Click here to submit a sound to be added!</a>
+      <a href="https://github.com/3kho/3kho.github.io/blob/main/projects/soundboard/index.htmlhttps://forms.gle/hoiTBEZ4p14iupXH6">Click here to submit a sound to be added!</a>
     </h2>
     <h3>Click the Download button to download the sound. All sounds are copyright free!</h3>
     <script>
