--- a/JESHURUN.html
+++ b/JESHURUN.html
@@ -4,7 +4,7 @@
     <![CDATA[<!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/3kho/3kho.github.io@main/projects/soundboard/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" sizes="192x192" href="https://cdn.jsdelivr.net/gh/3kho/3kho.github.io@tree/main/projects/soundboard/img/mlg-favicon.png" />
     <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/3kho/3kho.github.io@tree/main/projects/soundboard/img/mlg-favicon.png" type="image/x-icon" />
     <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/3kho/3kho.github.io@tree/main/projects/soundboard/img/mlg-favicon.png" type="image/x-icon" />
@@ -1319,7 +1319,7 @@
       </div>
       <div>
         <div class="sound">
-          <div class="circle small-button-background" style="background-color:#0000ff;"></div>
+          <div class="circle small-button-background" style="background-color:#1b9d44;"></div>
           <audio id="cr-intro" src="https://cdn.jsdelivr.net/gh/3kho/3kho.github.io@main/projects/soundboard/sounds/cr-intro.mp3" preload="auto"></audio>
           <button class="small-button" onclick="document.getElementById('cr-intro').play();"></button>
           <div class="small-button-shadow"></div>
@@ -1335,11 +1335,11 @@
 <div>
   <div class="sound">
     <div class="circle small-button-background" style="background-color:#COLOR;"></div>
-    <audio id="SOUND" src="https://cdn.jsdelivr.net/gh/3kho/3kho.github.io@main/projects/soundboard/sounds/SOUND.mp3" preload="auto"></audio>
+    <audio id="SOUND" src="/sounds/got.mp3" preload="auto"></audio>
     <button class="small-button" onclick="document.getElementById('SOUND').play();"></button>
     <div class="small-button-shadow"></div>
     <p class="name">
-      <button onclick="window.location.href='sounds/SOUND.mp3'">Download</button><br>
+      <button onclick="window.location.href='sounds/got.mp3'">Download</button><br>
       SOUND<br>
     </p>
   </div>
