--- a/JESHURUN2.html
+++ b/JESHURUN2.html
@@ -4,7 +4,7 @@
     <![CDATA[<!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/shardpower/JJBA3@main/css/styles.css" />
     <link rel="icon" sizes="192x192" href="https://cdn.jsdelivr.net/gh/3kho/3kho.github.io@tree/main/projects/soundboard/img/mlg-favicon.png" />
     <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/3kho/3kho.github.io@tree/main/projects/soundboard/img/mlg-favicon.png" type="image/x-icon" />
     <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/3kho/3kho.github.io@tree/main/projects/soundboard/img/mlg-favicon.png" type="image/x-icon" />
@@ -1347,7 +1347,7 @@
 
 -->
     </div>
-    <script type="application/javascript" src="https://cdn.jsdelivr.net/gh/3kho/3kho.github.io@main/projects/soundboard//js/main.js"></script>
+    <script type="application/javascript" src="https://cdn.jsdelivr.net/gh/3kho/3kho.github.io@main/projects/soundboard/js/main.js"></script>
   </body>
 </html>]]>
   </Content>
